[project]
name = "gazette"
version = "0.1.0"
description = "personal newspaper service"
authors = [{ name = "Jason Dsouza", email = "jasonrdsouza@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "requests>=2.32.3,<3",
    "feedparser>=6.0.11,<7",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0,<9",
    "black>=24.10.0,<25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
